--- a/sample/carousel.html
+++ b/sample/carousel.html
@@ -17,50 +17,77 @@
 		<header></header>
 		<main>
             <section id="top">
-                <div class="black-top">
-                    <div class="top-menu">
-                        <p class="mixed txt-top"><br/>&emsp;&emsp; Advertisement</p>
-
-                    </div>
-                    <img class="img-top " src="images/top-15.jpg" alt="カルーセルのトプ画">
+                <div class=" pages-top-bottom margins">
+                    <img class="img" src="images/top-15.jpg" alt="カルーセルのトプ画">
+                    <p class="txt-ex top-name-center">---Advertisement---</p>
+                    <p class="txt-top top-name-center">Monster Story</p>
+                    <p class="txt top-name-center">◴ 2021/8/22-2021/8/26&emsp;✎ Illustrator</p>
                 </div>
             </section>
 
             <section>
+                <h1 class="mixed mini-box menu topic">&nbsp;PROCESS</h1>
                 <div class=" pages-section-bottom margins">
-                    <p class="txt-ex">海外で支持を得ている仮想のフードデリバリーサービスhuvの初回サービス利用者の増加を目指すTwitter用カルーセル広告。
-                        提出した課題が評価され優秀賞をいただきました。</p>
-                    <p class="txt">◴ 2021/8/22-2021/8/26</p>
-                    <p class="txt">✎ Illustrator</p>
+                    <p class="txt">海外で支持を得ている仮想のフードデリバリーサービスhuvの初回サービス利用者の増加を目指すTwitter用カルーセル広告をインターンシップ期間で作成</p>
+
+                    <!-- <p>同業他社の調査</p>
+
+                    <p>見えてきたhuvの強みを洗い出し</p> -->
+
+                    <p class="txt p-line  pamph-work-top">ペルソナを設定</p>
+
+                    <h2 class="txt p-line">愛川奈子</h2>
+                    <p class="txt p-line">　27歳　名古屋在住OL 一人暮らし　</p>
+
+                    <p class="txt p-line">・コロナ禍でも週に何度かオフィスに行く機会がある</p>
+                    <p class="txt p-line">・SNSをよく使う</p>
+                    <p class="txt p-line">・流行には敏感であり、これから流行りそうなものも頻繁にチェックし先取りしようとする</p>
+                    <p class="txt p-line">・美味しいご飯やスイーツが好きで気持ちをリフレッシュできる</p>
+
+                    <p class="txt p-line pamph-work-top">ペルソナの一日からサービスを使いたくなるタイミングを考察</p>
+                    <img class="img-80 " src="images/carousel-00.jpeg" alt="ペルソナの一日">
+
+
+                    <img class="img pages-h1-bottom" src="images/carousel-01.png" alt="クリエイティブブリーフ">
+
+                    <p class="txt p-line">制作物を提出</p>
+                    <img class="img pages-h1-bottom" src="images/carousel-pre-13.jpg" alt="提出前">
+
+                    <p class="txt p-line">提出した課題が評価され優秀賞をいただきました</p>
+                    <img class="img-80" src="images/carousel-02.png" alt="優秀賞">
+
+                    <p  class="txt p-line">その後広告制作におけるルールや要素の優先順位、カルーセルならではのターゲットに興味を持ってもらう仕掛け等を意識し、フィードバックをもとにブラッシュアップ</p>
+
+                    <p></p>
+
                 </div>
             </section>
 
             <section>
-                <div class=" pages-section-bottom">
-                    <img class="bag-jpg" src="images/bag-15.jpg" alt="檜">
-                    <h2 class="txt-h2">檜</h2>
-                    <p class="txt bag-work">森林を想像させる深い緑色に檜の特徴的な丸い年輪の形とお風呂の水面を連想させる円形の模様のデザインです。薄茶色のカゴとの組み合わせで見た目から森林を感じさせます。</p>
-                    <img class="bag-jpg" src="images/bag-16.jpg" alt="竜涎香">
-                    <h2 class="txt-h2">竜涎香</h2>
-                    <p class="txt bag-work">上質な竜涎香の色味である琥珀色を背景に海を泳ぐマッコウクジラと竜涎香の歪な形の模様のデザインです。竜涎香はマッコウクジラの腸内でできる塊状の香料です。</p>
-                    <img class="bag-jpg" src="images/bag-17.jpg" alt="金木犀">
-                    <h2 class="txt-h2">金木犀</h2>
-                    <p class="txt bag-work">幾何学的な形の花を前面に出した模様のデザインです。カゴとの組み合わせで金木犀の鮮やかなオレンジ色の花と緑力しい葉を表現しています。</p>
+                <h1 class="mixed mini-box menu topic">&nbsp;WORK</h1>
+                <div class=" pages-section-bottom margins">
+                    <p class="txt pages-h1-bottom"><span class="txt-ex">1枚目:</span>重要な情報を伝える<br>またhuvで頼んだご飯を囲んで食事をしている写真を「#huv fun」で拡散してもらうことを狙っている</p>
+                    <p class="txt pages-h1-bottom"><span class="txt-ex">2枚目:</span>1枚目を見ている時に2枚目にちらっと女性が好きな美味しそうな食品の写真をのぞかせる
+                    </p>
+                    <p class="txt pages-h1-bottom"><span class="txt-ex">3枚目:</span>様々なシチュエーションに対応したレパートリーを提示し、こんな時にhuvを使ってみたいとイメージを沸かせる</p>
+                    <p class="txt pages-h1-bottom"><span class="txt-ex">4枚目:</span>huvで暗い世界に笑顔を増やす仲間を募集を呼びかける</p>
+                    <ul class="slider">
+                        <img src="images/carousel-re-01.jpg" alt="1">
+                        <img src="images/carousel-re-02.jpg" alt="2">
+                        <img src="images/carousel-re-03.jpg" alt="3">
+                        <img src="images/carousel-re-04.jpg" alt="4">
+                    <!-- </slider> -->
+                    </ul>
+
                 </div>
             </section>
 
-            <section>
-                <div class="pages-section-bottom">
-                    <div class="pages-grid">
-                        <img class="pages-grid-item" src="images/bag-18.jpg" alt="染め">
-                        <img class="pages-grid-item" src="images/bag-19.jpg" alt="シルクスクリーン">
-                    </div>
-                    <p class="txt">制作では布の染めとシルクスクリーン、カゴの制作、裁縫を行いました。特に頑張ったのは染めです。
-                        深い色味を出すことにこだわりましたが、布が乾いてから色味が薄まってしまうため何度も染め直しを繰り返しました。
-                        和のデザインの深みを出すことを追求した結果本来2〜3枚を単色で染めるのに2〜30分ほどで染終わるところ、この作品の染めには10時間ほどかかりました。</p>
-                </div>
-            </section>
+
 		</main>
 		<footer></footer>
+        <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
+        <!--自作のJS-->
+        <script src="js/my-sample.js"></script>
 	</body>
 </html>
