--- a/sample/goods.html
+++ b/sample/goods.html
@@ -18,9 +18,9 @@
 		<main>
             <section id="top">
                 <div class=" pages-top-bottom margins">
-                    <img class="img" src="images/top-18.jpg" alt="ボードのトプ画">
+                    <img class="img" src="images/top-23.jpg" alt="グッズのトプ画">
                     <p class="txt-ex top-name-center">---Goods---</p>
-                    <p class="txt-top top-name-center">芸工展2021 グッズ</p>
+                    <p class="txt-top top-name-center">芸工展2021 公式グッズ</p>
                     <p class="txt top-name-center">◴ 2021/7/31-2021/10/22&emsp;✎ Illustrator Photoshop</p>
                 </div>
             </section>
@@ -49,6 +49,7 @@
                         </div>
 
                         <p class="p-line pamph-work-top">私はグラフィック部署からグッズ販売に携わった</p>
+                        <p class="p-line">クリアファイルとクロッキー帳デザインを担当</p>
 
                         <p class="p-line">制作したグッズは本サイト模擬店ページから販売し、多くの方に購入して頂いた</p>
 
@@ -82,7 +83,7 @@
 
                         <p class="p-line">発注・販売</p>
 
-                        <p class="p-line pamph-work-top">クリアファイルのデザインは部署長からの選出でその後パーカーデザインにも採用された</p>
+                        <!-- <p class="p-line pamph-work-top">クリアファイルのデザインは部署長からの選出でその後パーカーデザインにも採用された</p> -->
 
                     </div>
 
@@ -92,37 +93,23 @@
             <section>
                 <h1 class="mixed mini-box menu topic">&nbsp;WORK</h1>
                 <div class=" pages-section-bottom margins">
+                    <h2 class="txt top-name-center">---ファイル---</h2>
+                    <img class="img" src="images/file-s.png" alt="ファイル">
                     <div class="pages-grid">
-                        <img class="bag-jpg pages-grid-item" src="images/board-01.jpg" alt="コーヒー">
-                        <div class="pages-grid-item">
-                            <h2 class="txt-h2 pages-center">---コーヒー×エチオピア---</h2>
-                            <p class="txt board-work">世界初のコーヒが生まれたという内容のカルディの伝説からヤギの角やコーヒーの実の形を取り入れた。</p>
-                        </div>
+                        <img class="bag-jpg pages-grid-item" src="images/parka.JPG" alt="パーカー">
+                        <p class="txt board-work pages-grid-item pages-h1-bottom">クリアファイルのデザインは部署長からの選出でその後パーカーデザインにも採用された</p>
                     </div>
+                    <h2 class="txt top-name-center">---クロッキー帳---</h2>
+                    <img class="img" src="images/book-s.png" alt="クロッキ＾">
+                    <h2 class="txt top-name-center">--- ステッカー ---</h2>
+                    <img class="img" src="images/seel-s.png" alt="シール">
+                    <h2 class="txt top-name-center">--- コードホルダー ---</h2>
+                    <img class="img pages-h1-bottom" src="images/code-s.png" alt="コードフォルダー">
+                    <h2 class="txt top-name-center">---缶バッジ---</h2>
+                    <img class="img" src="images/badge-s.png" alt="バッジ">
+                    <h2 class="txt top-name-center">--- アクリルキーホルダー ---</h2>
+                    <img class="img" src="images/kee-s.png" alt="アクリルキー">
 
-                    <div class="pages-grid">
-                        <img class="bag-jpg pages-grid-item" src="images/board-02.jpg" alt="紅茶">
-                        <div class="pages-grid-item">
-                            <h2 class="txt-h2 pages-center">---紅茶×イギリス---</h2>
-                            <p class="txt board-work">ベルガモットのポップな模様をイギリスのユニオンジャックカラー３色で表現した。</p>
-                        </div>
-                    </div>
-
-                    <div class="pages-grid">
-                        <img class="bag-jpg pages-grid-item" src="images/board-03.jpg" alt="緑茶">
-                        <div class="pages-grid-item">
-                            <h2 class="txt-h2 pages-center">---緑茶×日本---</h2>
-                            <p class="txt board-work">茶室に使われる畳を敷き詰めた空間を表現しました。１畳１畳に伝統的な和柄三崩しを取り入れた。</p>
-                        </div>
-                    </div>
-
-                    <div class="pages-grid">
-                        <img class="bag-jpg pages-grid-item" src="images/board-04.jpg" alt="ルイボスティー">
-                        <div class="pages-grid-item">
-                            <h2 class="txt-h2 pages-center">---ルイボスティー×南アフリカ共和国---</h2>
-                            <p class="txt board-work">太陽の照り続ける乾燥地帯で黒人たちの手によって力強く育つルイボスの木など、お茶ができる過程を表現した。</p>
-                        </div>
-                    </div>
                 </div>
             </section>
 		</main>
