--- a/sample/index.html
+++ b/sample/index.html
@@ -22,12 +22,22 @@
 				<div class="grid section-bottom">
 					<div class="grid-item black-box ">
 						<img class="imgs" src="images/card-08.jpg" alt="植物園">
-						<p class="card-txt">東山植物園サイン計画<br/>Sign plan</p>
-						<p class="triangle"></p>
+						<p class="card-txt pages-center">東山植物園サイン計画<br/>Sign plan</p>
+						<p class="triangle "></p>
 					</div>
 					<div class="grid-item black-box">
-						<img class="imgs" src="images/card-04.jpg" alt="りきゅう">
-						<p class="card-txt">東京下町もんじゃ屋りきゅう津島店<br/>Advertisement</p>
+						<img class="imgs" src="images/card-05.jpg" alt="カルーセル">
+						<p class="card-txt">株式会社アドウェイズ バーチャルインターンシップ<br/>Advertisement</p>
+						<p class="triangle"></p>
+					</div>
+					<div class="grid-item black-box ">
+						<img class="imgs" src="images/card-13.jpg" alt="グッズ">
+						<p class="card-txt">芸工展2021 公式グッズ<br/>Goods</p>
+						<p class="triangle"></p>
+					</div>
+					<div class="grid-item black-box ">
+						<img class="imgs" src="images/card-12.jpg" alt="パンフレット">
+						<p class="card-txt">芸工展2021 パンフレット<br/>Pamphlet</p>
 						<p class="triangle"></p>
 					</div>
 					<div class="grid-item black-box">
@@ -41,18 +51,18 @@
 						<p class="triangle"></p>
 					</div>
 					<div class="grid-item black-box">
-						<img class="imgs" src="images/card-05.jpg" alt="カルーセル">
-						<p class="card-txt">株式会社アドウェイズ バーチャルインターンシップ<br/>Advertisement</p>
-						<p class="triangle"></p>
-					</div>
-					<div class="grid-item black-box">
-						<img class="imgs" src="images/card-09.jpg" alt="猫">
-						<p class="card-txt">猫の日常<br/>Programming</p>
+						<img class="imgs" src="images/card-04.jpg" alt="りきゅう">
+						<p class="card-txt">東京下町もんじゃ屋りきゅう津島店<br/>Advertisement</p>
 						<p class="triangle"></p>
 					</div>
 					<div class="grid-item black-box">
 						<img class="imgs" src="images/card-10.jpg" alt="ハサミ">
 						<p class="card-txt">対戦型はさみ将棋<br/>Programming</p>
+						<p class="triangle"></p>
+					</div>
+					<div class="grid-item black-box">
+						<img class="imgs" src="images/card-09.jpg" alt="猫">
+						<p class="card-txt">猫の日常<br/>Programming</p>
 						<p class="triangle"></p>
 					</div>
 					<div class="grid-item black-box">
