--- a/sample/pamphlet.html
+++ b/sample/pamphlet.html
@@ -18,7 +18,7 @@
 		<main>
             <section id="top">
                 <div class=" pages-top-bottom margins">
-                    <img class="img" src="images/top-18.jpg" alt="ボードのトプ画">
+                    <img class="img" src="images/top-22.jpg" alt="パンフレットのトプ画">
                     <p class="txt-ex top-name-center">---Pamphlet---</p>
                     <p class="txt-top top-name-center">芸工展2021 パンフレット</p>
                     <p class="txt top-name-center">◴ 2021/7/31-2021/10/10&emsp;✎ Illustrator Photoshop</p>
@@ -70,10 +70,46 @@
             <section>
                 <h1 class="mixed mini-box menu topic">&nbsp;WORK</h1>
                 <div class=" pages-section-bottom margins">
+                    <div id="katudon_turn">
+                        <div>
+                        <img src="images/pamphlet-page/pamphlet_01.jpg">
+                        </div>
+                        <div>
+                        <img src="images/pamphlet-page/pamphlet-02.jpg">
+                        </div>
+                        <div>
+                        <img src="images/pamphlet-page/pamphlet-03.jpg">
+                        </div>
+                        <div>
+                        <img src="images/pamphlet-page/pamphlet-04.jpg">
+                        </div>
+                        <div>
+                        <img src="images/pamphlet-page/pamphlet-05.jpg">
+                        </div>
+                        <div>
+                        <img src="images/pamphlet-page/pamphlet-06.jpg">
+                        </div>
+                        <div>
+                        <img src="images/pamphlet-page/pamphlet-07.jpg">
+                        </div>
+                    </div>
+                    <ul>
+                        <li>
+                            <span id="prevpage">前のページ</span>
+                        </li>
+                        <li>
+                            <span id="nextpage">次のページ</span>
+                        </li>
+                    </ul>
 
                 </div>
             </section>
 		</main>
 		<footer></footer>
+        <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
+        <!--自作のJS-->
+        <script src="js/turn.js"></script>
+        <script src="js/my-sample.js"></script>
 	</body>
 </html>
