--- a/sample/motion.html
+++ b/sample/motion.html
@@ -18,7 +18,7 @@
 		<main>
             <section id="top">
                 <div class=" pages-top-bottom margins">
-                    <img class="img" src="images/top-18.jpg" alt="ボードのトプ画">
+                    <img class="img" src="images/top-21.jpg" alt="monsterのトプ画">
                     <p class="txt-ex top-name-center">---Motion capture---</p>
                     <p class="txt-top top-name-center">Monster Story</p>
                     <p class="txt top-name-center">◴ 2021/6/11-2021/7/23&emsp;✎ CorTex　MotionBuilder　Maya　AfterEffect　PremierePro</p>
