--- a/sample/carousel.html
+++ b/sample/carousel.html
@@ -36,13 +36,17 @@
 
                     <p class="txt p-line  pamph-work-top">ペルソナを設定</p>
 
-                    <h2 class="txt p-line">愛川奈子</h2>
-                    <p class="txt p-line">　27歳　名古屋在住OL 一人暮らし　</p>
+                    <div class="persona-box">
+                        
+                        <h2 class="txt p-line top-name-center">愛川奈子</h2>
+                        <img class="img-60 " src="images/persona.jpeg" alt="ペルソナ">
+                        <p class="txt p-line">　27歳　名古屋在住OL 一人暮らし　</p>
 
-                    <p class="txt p-line">・コロナ禍でも週に何度かオフィスに行く機会がある</p>
-                    <p class="txt p-line">・SNSをよく使う</p>
-                    <p class="txt p-line">・流行には敏感であり、これから流行りそうなものも頻繁にチェックし先取りしようとする</p>
-                    <p class="txt p-line">・美味しいご飯やスイーツが好きで気持ちをリフレッシュできる</p>
+                        <p class="txt p-line">・コロナ禍でも週に何度かオフィスに行く機会がある</p>
+                        <p class="txt p-line">・SNSをよく使う</p>
+                        <p class="txt p-line">・流行には敏感であり、これから流行りそうなものも頻繁にチェックし先取りしようとする</p>
+                        <p class="txt p-line">・美味しいご飯やスイーツが好きで気持ちをリフレッシュできる</p>
+                    </div>
 
                     <p class="txt p-line pamph-work-top">ペルソナの一日からサービスを使いたくなるタイミングを考察</p>
                     <img class="img-80 " src="images/carousel-00.jpeg" alt="ペルソナの一日">
