--- a/sample/index.html
+++ b/sample/index.html
@@ -18,68 +18,75 @@
 		<main>
 			<section id="Works">
 				<h1 class="mixed mini-box menu">&nbsp;WORKS</h1>
-				<p>graphic programming movie</p>
-				<div class="grid section-bottom">
-					<div class="grid-item black-box ">
-						<img class="imgs" src="images/card-08.jpg" alt="植物園">
-						<p class="card-txt pages-center">東山植物園サイン計画<br/>Sign plan</p>
-						<p class="triangle "></p>
-					</div>
-					<div class="grid-item black-box">
-						<img class="imgs" src="images/card-05.jpg" alt="カルーセル">
-						<p class="card-txt">株式会社アドウェイズ バーチャルインターンシップ<br/>Advertisement</p>
-						<p class="triangle"></p>
-					</div>
-					<div class="grid-item black-box ">
-						<img class="imgs" src="images/card-13.jpg" alt="グッズ">
-						<p class="card-txt">芸工展2021 公式グッズ<br/>Goods</p>
-						<p class="triangle"></p>
-					</div>
-					<div class="grid-item black-box ">
-						<img class="imgs" src="images/card-12.jpg" alt="パンフレット">
-						<p class="card-txt">芸工展2021 パンフレット<br/>Pamphlet</p>
-						<p class="triangle"></p>
-					</div>
-					<div class="grid-item black-box">
-						<img class="imgs" src="images/card-06.jpg" alt="薫り">
-						<p class="card-txt">薫りと和みを持ち運ぶ<br/>Textile / Goods</p>
-						<p class="triangle"></p>
-					</div>
-					<div class="grid-item black-box">
-						<img class="imgs" src="images/card-07.jpg" alt="茶">
-						<p class="card-txt">ティータイム<br/>Textile</p>
-						<p class="triangle"></p>
-					</div>
-					<div class="grid-item black-box">
-						<img class="imgs" src="images/card-04.jpg" alt="りきゅう">
-						<p class="card-txt">東京下町もんじゃ屋りきゅう津島店<br/>Advertisement</p>
-						<p class="triangle"></p>
-					</div>
-					<div class="grid-item black-box">
-						<img class="imgs" src="images/card-10.jpg" alt="ハサミ">
-						<p class="card-txt">対戦型はさみ将棋<br/>Programming</p>
-						<p class="triangle"></p>
-					</div>
-					<div class="grid-item black-box">
-						<img class="imgs" src="images/card-09.jpg" alt="猫">
-						<p class="card-txt">猫の日常<br/>Programming</p>
-						<p class="triangle"></p>
-					</div>
-					<div class="grid-item black-box">
-						<img class="imgs" src="images/card-11.jpg" alt="本">
-						<p class="card-txt">Monster Story<br/>Motion capture</p>
-						<p class="triangle"></p>
+				<div class="margins">
+					<p>graphic programming movie</p>
+					<div class="grid">
+						<div class="grid-item black-box ">
+							<img class="imgs" src="images/card-08.jpg" alt="植物園">
+							<p class="card-txt pages-center">東山植物園サイン計画<br/>Sign plan</p>
+							<p class="triangle "></p>
+						</div>
+						<div class="grid-item black-box">
+							<img class="imgs" src="images/card-05.jpg" alt="カルーセル">
+							<p class="card-txt">株式会社アドウェイズ バーチャルインターンシップ<br/>Advertisement</p>
+							<p class="triangle"></p>
+						</div>
+						<div class="grid-item black-box ">
+							<img class="imgs" src="images/card-13.jpg" alt="グッズ">
+							<p class="card-txt">芸工展2021 公式グッズ<br/>Goods</p>
+							<p class="triangle"></p>
+						</div>
+						<div class="grid-item black-box ">
+							<img class="imgs" src="images/card-12.jpg" alt="パンフレット">
+							<p class="card-txt">芸工展2021 パンフレット<br/>Pamphlet</p>
+							<p class="triangle"></p>
+						</div>
+						<div class="grid-item black-box">
+							<img class="imgs" src="images/card-06.jpg" alt="薫り">
+							<p class="card-txt">薫りと和みを持ち運ぶ<br/>Textile / Goods</p>
+							<p class="triangle"></p>
+						</div>
+						<div class="grid-item black-box">
+							<img class="imgs" src="images/card-07.jpg" alt="茶">
+							<p class="card-txt">ティータイム<br/>Textile</p>
+							<p class="triangle"></p>
+						</div>
+						<div class="grid-item black-box">
+							<img class="imgs" src="images/card-04.jpg" alt="りきゅう">
+							<p class="card-txt">東京下町もんじゃ屋りきゅう津島店<br/>Advertisement</p>
+							<p class="triangle"></p>
+						</div>
+						<div class="grid-item black-box">
+							<img class="imgs" src="images/card-10.jpg" alt="ハサミ">
+							<p class="card-txt">対戦型はさみ将棋<br/>Programming</p>
+							<p class="triangle"></p>
+						</div>
+						<div class="grid-item black-box">
+							<img class="imgs" src="images/card-09.jpg" alt="猫">
+							<p class="card-txt">猫の日常<br/>Programming</p>
+							<p class="triangle"></p>
+						</div>
+						<div class="grid-item black-box hyper">
+							<img class="imgs" src="images/card-11.jpg" alt="モンスター">
+							<p class="card-txt">Monster Story<br/>Motion capture</p>
+							<p class="triangle"></p>
+						</div>
 					</div>
 				</div>
 			</section>
 
 			<section id="About">
 				<h1 class="mixed mini-box menu">&nbsp;ABOUT</h1>
-				<h2>齋藤小薫　SAITO KOYUKI</h2>
-				<p>2019.3  宮城県立仙台二華高等学校卒</p>
-				<p>2019.4  名古屋市立大学　芸術工学部　情報環境デザイン学科</p>
-				<p>カラーコーディネーター検定アドバンス</p>
-				<p>Mail Address: saito.koyuki.2000@gmail.com</p>
+				<div class="margins section-bottom">
+					<div class="box17">
+						<img class="imgs" src="images/me.jpg" alt="顔写真">
+						<h2 class="txt">齋藤小薫　SAITO KOYUKI</h2>
+						<p class="txt">2019.3  宮城県立仙台二華高等学校卒</p>
+						<p class="txt">2019.4  名古屋市立大学　芸術工学部　情報環境デザイン学科入学</p>
+						<p class="txt">カラーコーディネーター検定アドバンス</p>
+						<p class="txt">Mail Address: saito.koyuki.2000@gmail.com</p>
+					</div>
+				</div>
 			</section>
 		</main>
 		<footer></footer>
